# valet

./: .gitignore  Cargo.toml  README.md  SETUP.md  TODO.md
launchd/: valet.plist
src/: config.rs  errors.rs  logging.rs  main.rs  security.rs  server.rs  tests.rs
src/mcp/: registry.rs  types.rs
src/tools/: exec.rs  fs_read.rs  fs_write.rs  mod.rs
